@@ -16,9 +16,18 @@ data_path=home+"/Projects/ProjectNeurogenesisOutput/recordings/"
 data_file=sys.argv[1]
 full_path=data_path+data_file
 
+layer_sizes = []
 all_data={}
 
 with open(full_path, 'rb') as bdata:
+
+    bnum_layers = bdata.read(8)
+    num_layers = struct.unpack('@l',bnum_layers)[0]
+
+    for i in range(num_layers):
+        b_layer_size = bdata.read(8)
+        layer_sizes.append(struct.unpack('@l',b_layer_size)[0])
+
     while(True):
         blayer_id=bdata.read(8)
         bneuron_id=bdata.read(8)
@@ -39,22 +48,19 @@ with open(full_path, 'rb') as bdata:
         else:
             break
             
-
+layer_counter=0
 for lk,lv in all_data.items():
-
-    num_neurons=0
     max_time=0
 
     for nk,nv in lv.items():
-
-        if nk > num_neurons:
-            num_neurons = nk
         
         m = max(nv)
         if m > max_time:
             max_time=m
 
-    layer_data = np.zeros([num_neurons+1,max_time+1])
+    print "Layer " + str(layer_counter) + " size: ", layer_sizes[layer_counter],max_time+1
+
+    layer_data = np.zeros([layer_sizes[layer_counter],max_time+1])
 
     for nk,nv in lv.items():
         for t in nv:
@@ -65,3 +71,5 @@ for lk,lv in all_data.items():
     plt.xlabel("Time")
     plt.ylabel("Neuron")
     plt.show()
+
+    layer_counter+=1
